# festlib

./: .gitignore  Cargo.toml  LICENSE  README.md  test_fest.xml
.github/workflows/: rust.yml
src/: fest.rs  lib.rs  types.rs  xml.rs
tests/: generic_test.rs  interaction_test.rs  unit_tests.rs
xml-doc/: README.md
